# moq-rs

./: .editorconfig  .envrc  .gitignore  CLAUDE.md  README.md  TODO.md  biome.jsonc  flake.nix  justfile  package-lock.json  package.json
.github/workflows/: check.yml  claude-code-review.yml  claude-dispatch.yml  claude.yml  docker.yml  release.yml  update-flake.yml
docs/: auth.md
js/: .gitignore  deno.json  eslint.config.js  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
js/hang/: README.md  package.json  tsconfig.json  vite.config.ts
js/hang-demo/: README.md  package.json  tailwind.config.js  vite.config.ts
js/hang-demo/src/: announce.tsx  index.css  index.html  index.ts  meet.html  meet.ts  publish.html  publish.ts  support.html  support.ts  vite-env.d.ts
js/hang/src/: connection.ts  frame.test.ts  frame.ts  index.ts  time.ts  vite-env.d.ts
js/hang/src/catalog/: audio.ts  capabilities.ts  captions.ts  chat.ts  detection.ts  index.ts  integers.ts  location.ts  preview.ts  root.ts  track.ts  user.ts  video.ts
js/hang/src/container/: bool.ts  chat.ts  frame.ts  index.ts  position.ts
js/hang/src/meet/: element.ts  element.tsx  room.ts
js/hang/src/preview/: index.ts  info.ts  member.ts  room.ts
js/hang/src/publish/: audio.ts  broadcast.ts  chat.ts  controls.tsx  element.ts  element.tsx  index.ts  location.ts  preview.ts  priority.ts  user.ts  video.ts
js/hang/src/support/: element.ts  element.tsx  index.ts  index.tsx
js/hang/src/util/: hacks.ts  hex.ts  libav.ts
js/hang/src/watch/: audio.ts  broadcast.ts  chat.ts  controls.tsx  element.ts  element.tsx  index.ts  location.ts  preview.ts  priority.ts  user.ts  video.ts
js/hang/src/worker/: index.ts  transcribe.ts  (+2 more)
js/moq/: README.md  package.json
js/moq-clock/: README.md  deno.json  package.json  tsconfig.json
js/moq-clock/src/: main.ts
js/moq-token/: README.md  package.json
js/moq-token/src/: algorithm.test.ts  algorithm.ts  claims.test.ts  claims.ts  index.ts  key.test.ts  key.ts
js/moq/examples/: publish.ts  subscribe.ts  transport_publish.ts  transport_subscribe.ts
js/moq/src/: announced.ts  broadcast.ts  connect.ts  connection.ts  group.ts  index.ts  path.test.ts  path.ts  publisher.ts  stream.test.ts  stream.ts  subscriber.ts  track.test.ts  track.ts  zod.ts
js/scripts/: package.ts  release.ts
js/signals/: README.md  package.json
js/signals/src/: dom.ts  index.ts  react.ts  solid.ts
moq-relay/src/: web.rs
moq-web/: Cargo.toml
moq-web/src/: lib.rs  session.rs  watch.rs
moq-web/src/connection/: connect.rs
moq-web/src/demo/: index.html
nix/modules/: moq-relay.nix
rs/: .dockerignore  .release-plz.toml  Cargo.toml  Dockerfile  flake.nix  hang-bbb  justfile
rs/hang/: CHANGELOG.md  Cargo.toml  README.md
rs/hang-cli/: CHANGELOG.md  Cargo.toml
rs/hang-cli/src/: client.rs  main.rs  server.rs
rs/hang-gst/: CHANGELOG.md  Cargo.toml
rs/hang-gst/src/: lib.rs
rs/hang-gst/src/sink/: imp.rs
rs/hang-gst/src/source/: imp.rs
rs/hang-wasm/: CHANGELOG.md  Cargo.toml
rs/hang/examples/: video.rs
rs/hang/src/: error.rs  lib.rs
rs/hang/src/annexb/: error.rs  import.rs  mod.rs
rs/hang/src/catalog/: chat.rs  location.rs  mod.rs  preview.rs  root.rs  track.rs  user.rs
rs/hang/src/catalog/audio/: aac.rs  captions.rs  codec.rs  mod.rs  speaking.rs
rs/hang/src/catalog/video/: av1.rs  codec.rs  detection.rs  h264.rs  h265.rs  mod.rs  vp9.rs
rs/hang/src/cmaf/: error.rs  import.rs
rs/hang/src/model/: broadcast.rs  frame.rs  group.rs  location.rs  mod.rs  room.rs  track.rs
rs/moq/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-clock/: CHANGELOG.md  Cargo.toml
rs/moq-clock/src/: clock.rs  main.rs
rs/moq-native/: CHANGELOG.md  Cargo.toml
rs/moq-native/src/: client.rs  crypto.rs  lib.rs  log.rs  server.rs
rs/moq-relay/: CHANGELOG.md  Cargo.toml  README.md  dev.toml  fly.toml  leaf.toml
rs/moq-relay/cfg/: dev.toml  leaf.toml  prod.toml  root.toml
rs/moq-relay/src/: auth.rs  cluster.rs  config.rs  connection.rs  main.rs  web.rs
rs/moq-token/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-token-cli/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-token-cli/src/: bin.rs
rs/moq-token/src/: algorithm.rs  claims.rs  key.rs  lib.rs  payload.rs  permissions.rs
rs/moq/examples/: chat.rs
rs/moq/src/: error.rs  lib.rs  path.rs  session.rs
rs/moq/src/coding/: decode.rs  encode.rs  message.rs  mod.rs  reader.rs  size.rs  stream.rs  varint.rs  versions.rs  writer.rs
rs/moq/src/ietf/: announce.rs  control.rs  goaway.rs  message.rs  mod.rs  object.rs  publisher.rs  role.rs  session.rs  subscribe.rs  subscribe_announces.rs  subscriber.rs  track.rs  util.rs
rs/moq/src/lite/: announce.rs  info.rs  mod.rs  publisher.rs  session.rs  setup.rs  subscribe.rs  subscriber.rs
rs/moq/src/message/: announce.rs  group.rs  mod.rs  setup.rs  stream.rs  subscribe.rs  versions.rs
rs/moq/src/model/: broadcast.rs  frame.rs  group.rs  mod.rs  origin.rs  produce.rs  track.rs
rs/moq/src/session/: mod.rs  publisher.rs  reader.rs  stream.rs  subscriber.rs  writer.rs
rs/nix/: overlay.nix  shell.nix
rs/nix/modules/: default.nix  moq-relay.nix
(+105 files in other folders)
