[workspace]
members = [
    "hang",
    "hang-cli",
    #"hang-gst",
    "moq",
    "moq-clock",
    "moq-native",
    "moq-relay",
    "moq-token",
    "moq-token-cli",
]

# without hang-gst because it requires gstreamer to be installed
default-members = [
    "hang",
    "hang-cli",
    "moq",
    "moq-clock",
    "moq-native",
    "moq-relay",
    "moq-token",
    "moq-token-cli",
]
resolver = "2"

[workspace.dependencies]

hang = { version = "0.4", path = "hang" }
moq-lite = { version = "0.3", path = "moq" }
moq-native = { version = "0.7", path = "moq-native" }
moq-token = { version = "0.4", path = "moq-token" }

serde = { version = "1", features = ["derive"] }
tokio = "1.45"
web-async = { version = "0.1.1", features = ["tracing"] }
web-transport = "0.9.3"
