[workspace]
members = [
    "hang",
    "hang-cli",
    "moq",
    "moq-clock",
    "moq-native",
    "moq-relay",
    "moq-token",
    "moq-token-cli",
]
resolver = "2"

[workspace.dependencies]
hang = { version = "0.5", path = "hang" }
moq-lite = { version = "0.7", path = "moq" }
moq-native = { version = "0.8", path = "moq-native" }
moq-token = { version = "0.5", path = "moq-token" }

serde = { version = "1", features = ["derive"] }
tokio = "1.47"
web-async = { version = "0.1.1", features = ["tracing"] }
web-transport-quinn = { version = "0.9" }
web-transport-trait = { version = "0.2" }
web-transport-ws = { version = "0.1.2" }
