[package]
name = "moq-native"
description = "Media over QUIC - Helper library for native applications"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq"
license = "MIT OR Apache-2.0"

version = "0.8.3"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["rustls/aws-lc-rs", "rcgen/aws_lc_rs", "quinn/rustls-aws-lc-rs"]
ring = ["rustls/ring", "rcgen/ring", "quinn/rustls-ring"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"

moq-lite = { workspace = true }
quinn = { version = "0.11", default-features = false, features = [
	"platform-verifier",
	"runtime-tokio",
	"bloom",
] }
rcgen = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-webpki = { version = "0.103", features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
time = "0.3"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
web-transport-quinn = { workspace = true }
