[package]
name = "moq-token"
description = "Media over QUIC - Token Generation and Validation"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq"
license = "MIT OR Apache-2.0"

version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-lc-rs = "1"
base64 = "0.22"
jsonwebtoken = "9"
moq-lite = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
